--- a/packages/@lightningjs/ui-components/src/components/Tooltip/Tooltip.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Tooltip/Tooltip.mdx
@@ -1,4 +1,7 @@
-﻿import { Canvas, Story } from '@storybook/blocks';
+﻿import { Meta } from '@storybook/blocks';
+import * as TooltipStories from './Tooltip.stories';
+
+<Meta of={TooltipStories} />
 
 # Tooltip
 
@@ -36,10 +39,6 @@ class Example extends lng.Component {
   }
 }
 ```
-
-<Canvas>
-  <Story id="utilities-tooltip--basic" />
-</Canvas>
 
 ### Sizing
 
