--- a/packages/@lightningjs/ui-components/src/components/Badge/Badge.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Badge/Badge.mdx
@@ -1,4 +1,4 @@
-﻿import { Meta, Canvas } from '@storybook/blocks';
+﻿import { Meta } from '@storybook/blocks';
 import Badge from '.';
 import * as BadgeStories from './Badge.stories.js';
 
@@ -79,21 +79,21 @@ class Example extends lng.Component {
 | title     | string | false    | undefined | text to render                                                       |
 | icon      | string | false    | undefined | path to image or inline SVG XML                                      |
 | padding   | number | false    | undefined | padding to add on the left and right between the text and background |
-| iconWidth | string | false    | undefined | icon width (required for SVG icons)                                  |
-| iconAlign | string | false    | undefined | side of the text the icon will appear on (`left` or `right`)         |
+| iconWidth | string | false    | undefined | icon width \(required for SVG icons\)                                |
+| iconAlign | string | false    | undefined | side of the text the icon will appear on \(`left` or `right`\)       |
 
 ### Style Properties
 
-| name            | type             | description                                                          |
-| --------------- | ---------------- | -------------------------------------------------------------------- | --------- | ----------------------------------------------------------------- |
+| name            | type             | description                                                          |           |                                                                       |
+| --------------- | ---------------- | -------------------------------------------------------------------- | --------- | --------------------------------------------------------------------- |
 | backgroundColor | string           | background style properties such as shader and color                 |
 | contentSpacing  | number           | padding to add between the icon and the text                         |
-| iconColor       | string           | false                                                                | undefined | color to be applied to the icon (only works with pure white PNGs) |
+| iconColor       | string           | false                                                                | undefined | color to be applied to the icon \( only works with pure white PNGs \) |
 | paddingX        | number           | padding to add on the left and right between the text and background |
 | paddingY        | number           | padding to add on the top and bottom between the text and background |
 | offsetY         | number           | Used to ensure text is positioned correctly                          |
 | radius          | number \| array  | shape of component                                                   |
-| textAlign       | string           | side of the component the text will appear on (`left` or `right`)    |
+| textAlign       | string           | side of the component the text will appear on \(`left` or `right`\)  |
 | textStyle       | string \| object | text style to apply to the title                                     |
 
 ### Events
