--- a/packages/@lightningjs/ui-components/src/components/Badge/Badge.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Badge/Badge.mdx
@@ -1,4 +1,4 @@
-﻿import { Meta, Canvas } from '@storybook/blocks';
+﻿import { Meta } from '@storybook/blocks';
 import Badge from '.';
 import * as BadgeStories from './Badge.stories.js';
 
@@ -32,17 +32,6 @@ class Example extends lng.Component {
 }
 ```
 
-<<<<<<< HEAD
-
-<Canvas>
-  <Story id="components-badge--text" />
-</Canvas>
-
-=======
-
-> > > > > > > 5e82b56b (feature(Storybook): updates mdx files with proper imports and renames doc only mdx files)
-> > > > > > > Or an icon:
-
 ```js
 import { Badge } from '@lightningjs/ui-components';
 
@@ -59,17 +48,6 @@ class Example extends lng.Component {
   }
 }
 ```
-
-<<<<<<< HEAD
-
-<Canvas>
-  <Story id="components-badge--icon-png" />
-</Canvas>
-
-=======
-
-> > > > > > > 5e82b56b (feature(Storybook): updates mdx files with proper imports and renames doc only mdx files)
-> > > > > > > A title and an icon can also be used together:
 
 ```js
 import { Badge } from '@lightningjs/ui-components';
@@ -102,18 +80,39 @@ class Example extends lng.Component {
 
 ### Style Properties
 
-| name            | type             | description                                                          |
-| --------------- | ---------------- | -------------------------------------------------------------------- |
-| backgroundColor | string           | color of the background                                              |
-| contentSpacing  | number           | padding to add between the icon and the text                         |
-| iconColor       | string           | color to be applied to the icon (only works with pure white PNGs)    |
-| offsetY         | number           | offset used to vertically center the text within the container       |
-| paddingX        | number           | padding to add on the left and right between the text and background |
-| paddingY        | number           | padding to add on the top and bottom between the text and background |
-| radius          | number \| array  | radius of badge corner                                               |
-| strokeColor     | string           | color of the Badge border                                            |
-| strokeWidth     | number           | width of the Badge border                                            |
-| textStyle       | string \| object | text style to apply to the title                                     |
+| name            | type            | description                                                          |
+| --------------- | --------------- | -------------------------------------------------------------------- |
+| backgroundColor | string          | color of the background                                              |
+| contentSpacing  | number          | padding to add between the icon and the text                         |
+| iconColor       | string          | color to be applied to the icon (only works with pure white PNGs)    |
+| offsetY         | number          | offset used to vertically center the text within the container       |
+| paddingX        | number          | padding to add on the left and right between the text and background |
+| paddingY        | number          | padding to add on the top and bottom between the text and background |
+| radius          | number \| array | radius of badge corner                                               |
+| strokeColor     | string          | color of the Badge border                                            |
+| strokeWidth     | number          | width of the Badge border                                            |
+
+=======
+| name | type | required | default | description |
+| --------- | ------ | -------- | --------- | -------------------------------------------------------------------- |
+| title | string | false | undefined | text to render |
+| icon | string | false | undefined | path to image or inline SVG XML |
+| padding | number | false | undefined | padding to add on the left and right between the text and background |
+| iconWidth | string | false | undefined | icon width \(required for SVG icons\) |
+| iconAlign | string | false | undefined | side of the text the icon will appear on \(`left` or `right`\) |
+
+### Style Properties
+
+| name            | type            | description                                                          |           |                                                                       |
+| --------------- | --------------- | -------------------------------------------------------------------- | --------- | --------------------------------------------------------------------- |
+| backgroundColor | string          | background style properties such as shader and color                 |
+| contentSpacing  | number          | padding to add between the icon and the text                         |
+| iconColor       | string          | false                                                                | undefined | color to be applied to the icon \( only works with pure white PNGs \) |
+| paddingX        | number          | padding to add on the left and right between the text and background |
+| paddingY        | number          | padding to add on the top and bottom between the text and background |
+| offsetY         | number          | Used to ensure text is positioned correctly                          |
+| radius          | number \| array | shape of component                                                   |
+| textAlign       | string          | side of the component the text will appear on \(`left` or `right`\)  |
 
 ### Events
 
