--- a/packages/@lightningjs/ui-components/src/components/CardContent/CardContent.mdx
+++ b/packages/@lightningjs/ui-components/src/components/CardContent/CardContent.mdx
@@ -1,5 +1,7 @@
-﻿import { Canvas, Story } from '@storybook/blocks';
-import CardContent from '.';
+﻿import { Meta } from '@storybook/blocks';
+import * as CardContentStories from './CardContent.stories';
+
+<Meta of={CardContentStories} />
 
 # CardContent
 
@@ -27,10 +29,6 @@ class Basic extends lng.Component {
 }
 ```
 
-<Canvas>
-  <Story id="components-cardcontent--card-content" />
-</Canvas>
-
 ## API
 
 ### Properties
@@ -46,13 +44,13 @@ class Basic extends lng.Component {
 
 ### Style Properties
 
-| name                     | type             | description                                                                    |
-| ------------------------ | ---------------- | ------------------------------------------------------------------------------ |
-| backgroundColor          | string           | color of the card                                                              |
-| expandedW                | number           | the desired width of the card when in the fully expanded (not collapsed) mode  |
-| expandedH                | number           | the desired height of the card when in the fully expanded (not collapsed) mode |
-| imageSize                | {w, h}           | the desired width and height the image in the card                             |
-| paddingHorizontal        | number           | padding on the x-axis between the right and left of the card and its content   |
-| paddingVertical          | number           | padding on the y-axis between the top and bottom of the card and its content   |
-| radius                   | number \| array  | corner radius of card                                                          |
-| titleTextStyle           | string \| object | style of the title text                                                        |
+| name              | type             | description                                                                    |
+| ----------------- | ---------------- | ------------------------------------------------------------------------------ |
+| backgroundColor   | string           | color of the card                                                              |
+| expandedW         | number           | the desired width of the card when in the fully expanded (not collapsed) mode  |
+| expandedH         | number           | the desired height of the card when in the fully expanded (not collapsed) mode |
+| imageSize         | {w, h}           | the desired width and height the image in the card                             |
+| paddingHorizontal | number           | padding on the x-axis between the right and left of the card and its content   |
+| paddingVertical   | number           | padding on the y-axis between the top and bottom of the card and its content   |
+| radius            | number \| array  | corner radius of card                                                          |
+| titleTextStyle    | string \| object | style of the title text                                                        |
