feature(Storybook): updates add-ons to use manager-api

--- a/packages/@lightningjs/ui-components/src/mixins/withClassCache/withClassCache.mdx
+++ b/packages/@lightningjs/ui-components/src/mixins/withClassCache/withClassCache.mdx
@@ -1,5 +1,7 @@
 ﻿import { Meta } from '@storybook/blocks';
 
+<Meta title="Utilties/withClassCache" />;
+
 # withClassCache
 
 The `withClassCache` mixin can be wrapped around a class to memoize class creation.
