--- a/packages/@lightningjs/ui-components/src/components/TabBar/TabBar.mdx
+++ b/packages/@lightningjs/ui-components/src/components/TabBar/TabBar.mdx
@@ -1,4 +1,5 @@
 ﻿import { Meta } from '@storybook/blocks';
+import { DocsLink } from '../../docs/utils';
 import * as TabBarStories from './TabBar.stories';
 
 <Meta of={TabBarStories} />
