--- a/packages/@lightningjs/ui-components/src/components/NavigationManager/NavigationManager.mdx
+++ b/packages/@lightningjs/ui-components/src/components/NavigationManager/NavigationManager.mdx
@@ -1,4 +1,5 @@
 ﻿import { Meta } from '@storybook/blocks';
+import { DocsLink } from '../../docs/utils';
 import * as NavigationManagerStories from './NavigationManager.stories';
 
 <Meta of={NavigationManagerStories} />
