--- a/packages/@lightningjs/ui-components/src/components/TabBar/Tab.mdx
+++ b/packages/@lightningjs/ui-components/src/components/TabBar/Tab.mdx
@@ -1,4 +1,5 @@
 ﻿import { Meta } from '@storybook/blocks';
+import { DocsLink } from '../../docs/utils';
 import * as TabStories from './Tab.stories';
 
 <Meta of={TabStories} />
