docs(toJSON): add docs for options

--- a/packages/@lightningjs/ui-components-test-utils/src/docs/TestRenderer/toJSON.stories.mdx
+++ b/packages/@lightningjs/ui-components-test-utils/src/docs/TestRenderer/toJSON.stories.mdx
@@ -28,10 +28,10 @@ Convert Lightning components to JSON to be used in [Jest Snapshot Tests](https:/
 
 `toJSON(element, { children } = {})`
 
-| argument     | type              | default | description                 |
-| ------------ | ----------------- | ------- | --------------------------- |
-| element      | Lightning.Element | -       | element to create JSON from |
-| { children } | object            | {}      | TODO                        |
+| argument     | type              | default           | description                                                                                                        |
+| ------------ | ----------------- | ----------------- | ------------------------------------------------------------------------------------------------------------------ |
+| element      | Lightning.Element | -                 | element to create JSON from                                                                                        |
+| { children } | object            | { children: 100 } | object with `children` property to define the number of layers deep in the render tree should be converted to JSON |
 
 <br />
 
