docs(makeCreateComponent): remove duplicated comment

--- a/packages/@lightningjs/ui-components-test-utils/src/docs/TestUtils/makeCreateComponent.stories.mdx
+++ b/packages/@lightningjs/ui-components-test-utils/src/docs/TestUtils/makeCreateComponent.stories.mdx
@@ -28,11 +28,11 @@ Returns a function, referred to as a `createComponent` function, which is used t
 
 `makeCreateComponent(component, defaultConfig, defaultOptions)`
 
-| argument       | type          | default                                  | description                                                                                                                |
-| -------------- | ------------- | ---------------------------------------- | -------------------------------------------------------------------------------------------------------------------------- |
-| component      | lng.Component | the component to generate an instance of | component to render an instance of                                                                                         |
-| defaultConfig  | object        | {}                                       | properties that should be applied to the component by default                                                              |
-| defaultOptions | object        | {}                                       | default options used when creating the component instance (these options are passed to the `TestRenderer.create` function) |
+| argument       | type          | default   | description                                                                                                                |
+| -------------- | ------------- | --------- | -------------------------------------------------------------------------------------------------------------------------- |
+| component      | lng.Component | undefined | component to render an instance of                                                                                         |
+| defaultConfig  | object        | {}        | properties that should be applied to the component by default                                                              |
+| defaultOptions | object        | {}        | default options used when creating the component instance (these options are passed to the `TestRenderer.create` function) |
 
 ### `createComponent`
 
