--- a/packages/@lightningjs/ui-components/src/components/CardContent/CardContent.mdx
+++ b/packages/@lightningjs/ui-components/src/components/CardContent/CardContent.mdx
@@ -49,7 +49,7 @@ class Basic extends lng.Component {
 | backgroundColor   | string           | color of the card                                                              |
 | expandedWidth     | number           | the desired width of the card when in the fully expanded (not collapsed) mode  |
 | expandedHeight    | number           | the desired height of the card when in the fully expanded (not collapsed) mode |
-| imageSize         | {w, h}           | the desired width and height the image in the card                             |
+| imageSize         | `{w, h}`         | the desired width and height the image in the card                             |
 | metadata          | string \| object | text style for the metadata                                                    |
 | paddingHorizontal | number           | padding on the x-axis between the right and left of the card and its content   |
 | paddingVertical   | number           | padding on the y-axis between the top and bottom of the card and its content   |
