--- a/packages/@lightningjs/ui-components/src/docs/ThemingHierarchy.mdx
+++ b/packages/@lightningjs/ui-components/src/docs/ThemingHierarchy.mdx
@@ -1,4 +1,4 @@
-﻿import { Meta } from '@storybook/addon-docs';
+﻿import { Meta } from '@storybook/blocks';
 import Flowchart from '../assets/images/Flowchart.png';
 
 <Meta title="Documentation / Theming/ Hierarchy" />
