feature(Storybook): changes exports in package to conditionals
feature(Storybook): cleans up doc files and adds Tile api field
feature(Storybook): updates to mdx and doc files

--- a/packages/@lightningjs/ui-components/src/components/Badge/Badge.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Badge/Badge.mdx
@@ -3,8 +3,7 @@ import Badge from '.';
 import * as BadgeStories from './Badge.stories.js';
 
 <Meta of={BadgeStories} />
-
-# Badge
+<Title />
 
 This component is used to display small keywords of metadata, like video or audio quality (ie HD or CC).
 
