--- a/packages/@lightningjs/ui-components/src/components/Button/Button.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Button/Button.mdx
@@ -2,8 +2,7 @@
 import * as ButtonStories from './Button.stories';
 
 <Meta of={ButtonStories} />
-
-# Button
+<Title />
 
 Basic component that handles styling and functionality for a button.
 
