--- a/packages/@lightningjs/ui-components/src/components/Card/Card.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Card/Card.mdx
@@ -1,10 +1,9 @@
-﻿import { Meta } from '@storybook/blocks';
-import Card from './Card';
+﻿import { Meta, Title } from '@storybook/blocks';
 import * as CardStories from './Card.stories';
 
 <Meta of={CardStories} />
 
-# Card
+<Title />
 
 Cards are very configurable. Cards is the foundational basis for all other card variations.
 
