--- a/packages/@lightningjs/ui-components/src/components/Card/CardSection.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Card/CardSection.mdx
@@ -1,9 +1,9 @@
-﻿import { Meta } from '@storybook/blocks';
+﻿import { Meta, Title } from '@storybook/blocks';
 import * as CardSectionStories from './CardSection.stories';
 
 <Meta of={CardSectionStories} />
 
-# CardSection
+<Title />
 
 Component shows title and icon to the right of the title.
 
