--- a/packages/@lightningjs/ui-components/src/components/Card/CardTitle.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Card/CardTitle.mdx
@@ -1,9 +1,9 @@
-﻿import { Meta } from '@storybook/blocks';
+﻿import { Meta, Title } from '@storybook/blocks';
 import * as CardTitleStories from './CardTitle.stories';
 
 <Meta of={CardTitleStories} />
 
-# CardTitle
+<Title />
 
 Component shows title and description within a card.
 
