--- a/packages/@lightningjs/ui-components/src/components/CardContent/CardContent.mdx
+++ b/packages/@lightningjs/ui-components/src/components/CardContent/CardContent.mdx
@@ -1,9 +1,9 @@
-﻿import { Meta } from '@storybook/blocks';
+﻿import { Meta, Title } from '@storybook/blocks';
 import * as CardContentStories from './CardContent.stories';
 
 <Meta of={CardContentStories} />
 
-# CardContent
+<Title />
 
 Formats a Card with one part Tile and one part Metadata.
 
