--- a/packages/@lightningjs/ui-components/src/components/Checkbox/Checkbox.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Checkbox/Checkbox.mdx
@@ -1,12 +1,12 @@
-﻿import { Meta } from '@storybook/blocks';
-import Checkbox from '.';
+﻿import { Meta, Title } from '@storybook/blocks';
 import * as CheckboxStories from './Checkbox.stories';
 
 <Meta of={CheckboxStories} />
 
-# Checkbox
+<Title />
 
-A checkbox component that can be toggled between a checked an unchecked state.
+A checkbox component that can be toggled between a checked an unchecked
+state.
 
 ## Source
 
