--- a/packages/@lightningjs/ui-components/src/components/Column/Column.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Column/Column.mdx
@@ -1,11 +1,10 @@
-﻿import { Meta } from '@storybook/blocks';
+﻿import { Meta, Title } from '@storybook/blocks';
 import { DocsLink } from '../../docs/utils';
-import Column from '.';
 import * as ColumnStories from './Column.stories';
 
 <Meta of={ColumnStories} />
 
-# Column
+<Title />
 
 Focus management and smooth scrolling for a list of vertically-oriented items.
 
