--- a/packages/@lightningjs/ui-components/src/components/ControlRow/ControlRow.mdx
+++ b/packages/@lightningjs/ui-components/src/components/ControlRow/ControlRow.mdx
@@ -1,10 +1,9 @@
-﻿import { Meta } from '@storybook/blocks';
-import ControlRow from '.';
+﻿import { ArgTypes, Meta, Title } from '@storybook/blocks';
 import * as ControlRowStories from './ControlRow.stories';
 
 <Meta of={ControlRowStories} />
 
-# ControlRow
+<Title />
 
 The `ControlRow` component renders a
 [TitleRow](/docs/components-titlerow--basic) component with optional left controls content items, and right controls
@@ -76,6 +75,8 @@ class LazyLoad extends lng.Component {
 ```
 
 ## API
+
+<ArgTypes of={ControlRowStories} />
 
 ### Properties
 
