--- a/packages/@lightningjs/ui-components/src/components/FocusManager/FocusManager.mdx
+++ b/packages/@lightningjs/ui-components/src/components/FocusManager/FocusManager.mdx
@@ -1,10 +1,10 @@
-﻿import { Meta } from '@storybook/blocks';
+﻿import { Meta, Title } from '@storybook/blocks';
 import { DocsLink } from '../../docs/utils';
 import * as FocusManagerStories from './FocusManager.stories';
 
 <Meta of={FocusManagerStories} />
 
-# FocusManager
+<Title />
 
 In Lightning, setting focus on elements and managing it manually is required. `FocusManager` is a component that simplifies focus for elements within a list.
 
