--- a/packages/@lightningjs/ui-components/src/components/Gradient/Gradient.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Gradient/Gradient.mdx
@@ -1,10 +1,9 @@
-﻿import { Meta } from '@storybook/blocks';
-import Gradient from '.';
+﻿import { Meta, Title } from '@storybook/blocks';
 import * as GradientStories from './Gradient.stories';
 
 <Meta of={GradientStories} />
 
-# Gradient
+<Title />
 
 A semitransparent Gradient to be used on top of any component, like Artwork.
 
