--- a/packages/@lightningjs/ui-components/src/components/Key/Key.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Key/Key.mdx
@@ -1,10 +1,9 @@
-﻿import { Meta } from '@storybook/blocks';
-import Key from '.';
+﻿import { Meta, Title } from '@storybook/blocks';
 import * as KeyStories from './Key.stories';
 
 <Meta of={KeyStories} />
 
-# Key
+<Title />
 
 An extension of the Button component that represents an individual key on a keyboard
 
