--- a/packages/@lightningjs/ui-components/src/components/Keyboard/Keyboard.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Keyboard/Keyboard.mdx
@@ -1,9 +1,9 @@
-﻿import { Meta } from '@storybook/blocks';
+﻿import { Meta, Title } from '@storybook/blocks';
 import * as KeyboardStories from './Keyboard.stories';
 
 <Meta of={KeyboardStories} />
 
-# Keyboard
+<Title />
 
 Pattern created out of multiple elements to represent a keyboard.
 
