--- a/packages/@lightningjs/ui-components/src/components/Knob/Knob.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Knob/Knob.mdx
@@ -1,10 +1,9 @@
-﻿import { Meta } from '@storybook/blocks';
-import Knob from '.';
+﻿import { Meta, Title } from '@storybook/blocks';
 import * as KnobStories from './Knob.stories';
 
 <Meta of={KnobStories} />
 
-# Knob
+<Title />
 
 Knob is a circle component that can be added on to other components
 
