--- a/packages/@lightningjs/ui-components/src/components/Label/Label.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Label/Label.mdx
@@ -1,10 +1,9 @@
-﻿import { Meta } from '@storybook/blocks';
-import Label from '.';
+﻿import { Meta, Title } from '@storybook/blocks';
 import * as LabelStories from './Label.stories';
 
 <Meta of={LabelStories} />
 
-# Label
+<Title />
 
 This component is used to convey the status of a program in Tile ex. "Live" or "On Now".
 
