--- a/packages/@lightningjs/ui-components/src/components/Marquee/Marquee.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Marquee/Marquee.mdx
@@ -1,9 +1,9 @@
-﻿import { Meta } from '@storybook/blocks';
+﻿import { Meta, Title } from '@storybook/blocks';
 import * as MarqueeStories from './Marquee.stories';
 
 <Meta of={MarqueeStories} />
 
-# Marquee
+<Title />
 
 Scrolls long text
 
