--- a/packages/@lightningjs/ui-components/src/components/MetadataBase/MetadataBase.mdx
+++ b/packages/@lightningjs/ui-components/src/components/MetadataBase/MetadataBase.mdx
@@ -1,9 +1,9 @@
-﻿import { Meta } from '@storybook/blocks';
+﻿import { Meta, Title } from '@storybook/blocks';
 import * as MetadataBaseStories from './MetadataBase.stories.js';
 
 <Meta of={MetadataBaseStories} />
 
-# MetadataBase
+<Title />
 
 A component to quickly and easily lay out several pieces of content.
 
