--- a/packages/@lightningjs/ui-components/src/components/MetadataCard/MetadataCard.mdx
+++ b/packages/@lightningjs/ui-components/src/components/MetadataCard/MetadataCard.mdx
@@ -1,9 +1,9 @@
-﻿import { Meta } from '@storybook/blocks';
+﻿import { Meta, Title } from '@storybook/blocks';
 import * as MetadataCardStories from './MetadataCard.stories.js';
 
 <Meta of={MetadataCardStories} />
 
-# MetadataCard
+<Title />
 
 A component to lay out content on Cards.
 
