--- a/packages/@lightningjs/ui-components/src/components/Radio/Radio.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Radio/Radio.mdx
@@ -1,9 +1,9 @@
-﻿import { Meta } from '@storybook/blocks';
+﻿import { Meta, Tile } from '@storybook/blocks';
 import * as RadioStories from './Radio.stories';
 
 <Meta of={RadioStories} />
 
-# Radio
+<Title />
 
 A radio has 2 states: "on" or "off". When used in a group, it should let a user select only one of the choices at a time. This can be managed with the withSelections mixin
 
