--- a/packages/@lightningjs/ui-components/src/components/Row/Row.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Row/Row.mdx
@@ -1,10 +1,10 @@
-﻿import { Meta } from '@storybook/blocks';
+﻿import { Meta, Tile } from '@storybook/blocks';
 import { DocsLink } from '../../docs/utils';
 import * as RowStories from './Row.stories';
 
 <Meta of={RowStories} />
 
-# Row
+<Title />
 
 Focus management and smooth scrolling for a list of horizontally-oriented items.
 
