--- a/packages/@lightningjs/ui-components/src/components/Shadow/Shadow.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Shadow/Shadow.mdx
@@ -1,9 +1,9 @@
-﻿import { Meta } from '@storybook/blocks';
+﻿import { Meta, Tile } from '@storybook/blocks';
 import * as ShadowStories from './Shadow.stories';
 
 <Meta of={ShadowStories} />
 
-# Shadow
+<Title />
 
 A shadow component generally used to apply dropshadows to other components.
 
