--- a/packages/@lightningjs/ui-components/src/components/Surface/Surface.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Surface/Surface.mdx
@@ -1,9 +1,9 @@
-﻿import { Meta } from '@storybook/blocks';
+﻿import { Meta, Tile } from '@storybook/blocks';
 import * as SurfaceStories from './Surface.stories';
 
 <Meta of={SurfaceStories} />
 
-# Surface
+<Title />
 
 Surface allows for the background of components such as listItems, cards, and tiles to change dependent on the state of the component.
 
