--- a/packages/@lightningjs/ui-components/src/components/TextBox/TextBox.mdx
+++ b/packages/@lightningjs/ui-components/src/components/TextBox/TextBox.mdx
@@ -1,9 +1,9 @@
-﻿import { Meta } from '@storybook/blocks';
+﻿import { Meta, Title } from '@storybook/blocks';
 import * as TextBoxStories from './TextBox.stories';
 
 <Meta of={TextBoxStories} />
 
-# TextBox
+<Title />
 
 General purpose TextBox component
 
