--- a/packages/@lightningjs/ui-components/src/components/Tile/Tile.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Tile/Tile.mdx
@@ -1,9 +1,9 @@
-﻿import { Meta } from '@storybook/blocks';
+﻿import { Meta, Title } from '@storybook/blocks';
 import * as TileStories from './Tile.stories';
 
 <Meta of={TileStories} />
 
-# Tile
+<Title />
 
 A flexible solution for displaying artwork and meta information. Used to render entity posters for browsing.
 
