--- a/packages/@lightningjs/ui-components/src/components/Toggle/Toggle.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Toggle/Toggle.mdx
@@ -1,9 +1,9 @@
-﻿import { Meta } from '@storybook/blocks';
+﻿import { Meta, Title } from '@storybook/blocks';
 import * as ToggleStories from './Toggle.stories';
 
 <Meta of={ToggleStories} />
 
-# Toggle
+<Title />
 
 A checkbox component with toggle slider behavior
 
