--- a/packages/@lightningjs/ui-components/src/components/Artwork/Artwork.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Artwork/Artwork.mdx
@@ -1,10 +1,8 @@
-﻿import { Meta } from '@storybook/blocks';
-import Artwork from '.';
+﻿import { ArgTypes, Meta, Title } from '@storybook/blocks';
 import * as ArtworkStories from './Artwork.stories.js';
 
 <Meta of={ArtworkStories} />
-
-# Artwork
+<Title />
 
 Artwork has been architected to be the easiest way to use images in your lightning application.
 
