--- a/packages/@lightningjs/ui-components/src/components/GridOverlay/GridOverlay.mdx
+++ b/packages/@lightningjs/ui-components/src/components/GridOverlay/GridOverlay.mdx
@@ -1,10 +1,9 @@
 ﻿import { Meta } from '@storybook/blocks';
-import GridOverlay from '.';
 import * as GridOverlayStories from './GridOverlay.stories';
 
 <Meta of={GridOverlayStories} />
 
-# GridOverlay
+<Title />
 
 This component shows the grid layout, including the column spans and guides for margins and gutters.
 
