--- a/packages/@lightningjs/ui-components/src/components/Icon/Icon.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Icon/Icon.mdx
@@ -1,9 +1,9 @@
-﻿import { Meta } from '@storybook/blocks';
+﻿import { Meta, Title } from '@storybook/blocks';
 import * as IconStories from './Icon.stories';
 
 <Meta of={IconStories} />
 
-# Icon
+<Title />
 
 Renders icon paths and inline svgs
 
