--- a/packages/@lightningjs/ui-components/src/components/InlineContent/InlineContent.mdx
+++ b/packages/@lightningjs/ui-components/src/components/InlineContent/InlineContent.mdx
@@ -1,10 +1,9 @@
-﻿import { Meta } from '@storybook/blocks';
-import InlineContent from '.';
+﻿import { Meta, Title } from '@storybook/blocks';
 import * as InlineContentStories from './InlineContent.stories';
 
 <Meta of={InlineContentStories} />
 
-# InlineContent
+<Title />
 
 **Depreciated: [TextBox](/docs/components-textbox--basic) is the recommended component for rendering text and supports all properties of InlineContent**
 
