--- a/packages/@lightningjs/ui-components/src/components/Input/Input.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Input/Input.mdx
@@ -1,10 +1,9 @@
-﻿import { Meta } from '@storybook/blocks';
-import Input from './Input.js';
+﻿import { Meta, Title } from '@storybook/blocks';
 import * as InputStories from './Input.stories';
 
 <Meta of={InputStories} />
 
-# Input
+<Title />
 
 Text input field component
 
