--- a/packages/@lightningjs/ui-components/src/components/ListItem/ListItem.mdx
+++ b/packages/@lightningjs/ui-components/src/components/ListItem/ListItem.mdx
@@ -1,9 +1,9 @@
-﻿import { Meta } from '@storybook/blocks';
+﻿import { Meta, Title } from '@storybook/blocks';
 import * as ListItemStories from './ListItem.stories';
 
 <Meta of={ListItemStories} />
 
-# ListItem
+<Title />
 
 Component to represent a single item within a list.
 
