--- a/packages/@lightningjs/ui-components/src/components/ListItem/ListItemPicker.mdx
+++ b/packages/@lightningjs/ui-components/src/components/ListItem/ListItemPicker.mdx
@@ -1,9 +1,9 @@
-﻿import { Meta } from '@storybook/blocks';
+﻿import { Meta, Title } from '@storybook/blocks';
 import * as ListItemPickerStories from './ListItemPicker.stories';
 
 <Meta of={ListItemPickerStories} />
 
-# ListItemPicker
+<Title />
 
 ListItem component with the ability to let a user pick from a list of options.
 
