--- a/packages/@lightningjs/ui-components/src/components/ListItem/ListItemSlider.mdx
+++ b/packages/@lightningjs/ui-components/src/components/ListItem/ListItemSlider.mdx
@@ -1,9 +1,9 @@
-﻿import { Meta } from '@storybook/blocks';
+﻿import { Meta, Title } from '@storybook/blocks';
 import * as ListItemSliderStories from './ListItemSlider.stories';
 
 <Meta of={ListItemSliderStories} />
 
-# ListItemSlider
+<Title />
 
 A ListItem component with slider functionality
 
