--- a/packages/@lightningjs/ui-components/src/components/MetadataTile/MetadataTile.mdx
+++ b/packages/@lightningjs/ui-components/src/components/MetadataTile/MetadataTile.mdx
@@ -1,9 +1,9 @@
-﻿import { Meta } from '@storybook/blocks';
+﻿import { Meta, Title } from '@storybook/blocks';
 import * as MetadataTileStories from './MetadataTile.stories.js';
 
 <Meta of={MetadataTileStories} />
 
-# MetadataTile
+<Title />
 
 Metadata to be displayed along with `Tiles`.
 
