--- a/packages/@lightningjs/ui-components/src/components/NavigationManager/NavigationManager.mdx
+++ b/packages/@lightningjs/ui-components/src/components/NavigationManager/NavigationManager.mdx
@@ -1,10 +1,10 @@
-﻿import { Meta } from '@storybook/blocks';
+﻿import { Meta, Title } from '@storybook/blocks';
 import { DocsLink } from '../../docs/utils';
 import * as NavigationManagerStories from './NavigationManager.stories';
 
 <Meta of={NavigationManagerStories} />
 
-# NavigationManager
+<Title />
 
 NavigationManager is a subclass of [FocusManager](?path=/docs/components-focusmanager--rows),
 and parent class of [Row](?path=/docs/components-row--row) and [Column](?path=/docs/components-column--column).
