--- a/packages/@lightningjs/ui-components/src/components/ProgressBar/ProgressBar.mdx
+++ b/packages/@lightningjs/ui-components/src/components/ProgressBar/ProgressBar.mdx
@@ -1,9 +1,9 @@
-﻿import { Meta } from '@storybook/blocks';
+﻿import { Meta, Title } from '@storybook/blocks';
 import * as ProgressBarStories from './ProgressBar.stories';
 
 <Meta of={ProgressBarStories} />
 
-# ProgressBar
+<Title />
 
 Component that shows current progress in a range
 
