--- a/packages/@lightningjs/ui-components/src/components/Provider/Provider.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Provider/Provider.mdx
@@ -1,10 +1,10 @@
-﻿import { Meta } from '@storybook/blocks';
+﻿import { Meta, Title } from '@storybook/blocks';
 import xfinityProviderLogo from '../../assets/images/Xfinity-Provider-Logo-Square.png';
 import * as ProviderStories from './Provider.stories.js';
 
 <Meta of={ProviderStories} />
 
-# Provider
+<Title />
 
 The `Provider` serves to condense a list of providers to show only the number you specify, and add a counter to represent any that remain.
 
