--- a/packages/@lightningjs/ui-components/src/components/ScrollWrapper/ScrollWrapper.mdx
+++ b/packages/@lightningjs/ui-components/src/components/ScrollWrapper/ScrollWrapper.mdx
@@ -1,10 +1,10 @@
-﻿import { Meta } from '@storybook/blocks';
+﻿import { Meta, Tile } from '@storybook/blocks';
 import { DocsLink } from '../../docs/utils';
 import * as ScrollWrapperStories from './ScrollWrapper.stories';
 
 <Meta of={ScrollWrapperStories} />
 
-# ScrollWrapper
+<Title />
 
 A scrollable container for text content.
 
