--- a/packages/@lightningjs/ui-components/src/components/TabBar/TabBar.mdx
+++ b/packages/@lightningjs/ui-components/src/components/TabBar/TabBar.mdx
@@ -1,10 +1,10 @@
-﻿import { Meta } from '@storybook/blocks';
+﻿import { Meta, Title } from '@storybook/blocks';
 import { DocsLink } from '../../docs/utils';
 import * as TabBarStories from './TabBar.stories';
 
 <Meta of={TabBarStories} />
 
-# TabBar
+<Title />
 
 Tab navigation between groups of content.
 
