feature(Storybook): cleans up doc files and adds Tile api field

--- a/packages/@lightningjs/ui-components/src/components/TitleRow/TitleRow.mdx
+++ b/packages/@lightningjs/ui-components/src/components/TitleRow/TitleRow.mdx
@@ -1,9 +1,9 @@
-﻿import { Meta } from '@storybook/blocks';
+﻿import { Meta, Tile } from '@storybook/blocks';
 import * as TitleRowStories from './TitleRow.stories';
 
 <Meta of={TitleRowStories} />
 
-# TitleRow
+<Title />
 
 The `TitleRow` component renders a [Row](/docs/layout-row--basic) component with a title displayed as a [TextBox](/docs/elements-textbox--base) above the Row items.
 
