--- a/packages/@lightningjs/ui-components/src/components/MetadataCardContent/MetadataCardContent.mdx
+++ b/packages/@lightningjs/ui-components/src/components/MetadataCardContent/MetadataCardContent.mdx
@@ -1,12 +1,9 @@
-﻿import { Meta } from '@storybook/blocks';
-import MetadataCardContent from '.';
-import Provider from '../Provider';
-import xfinityProviderLogo from '../../assets/images/Xfinity-Provider-Logo-Square.png';
+﻿import { Meta, Title } from '@storybook/blocks';
 import * as MetadataCardContentStories from './MetadataCardContent.stories.js';
 
 <Meta of={MetadataCardContentStories} />
 
-# MetadataCardContent
+<Title />
 
 A component to format metadata on CardContent. Contains a [Provider](?path=/docs/elements-provider--basic) to format [Icon(s)](?path=/docs/foundations-icon--png).
 
