--- a/packages/@lightningjs/ui-components/src/components/TabBar/Tab.mdx
+++ b/packages/@lightningjs/ui-components/src/components/TabBar/Tab.mdx
@@ -1,10 +1,10 @@
-﻿import { Meta } from '@storybook/blocks';
+﻿import { Meta, Tile } from '@storybook/blocks';
 import { DocsLink } from '../../docs/utils';
 import * as TabStories from './Tab.stories';
 
 <Meta of={TabStories} />
 
-# Tab
+<Title />
 
 Tab component to be rendered in a [TabBar](/docs/elements-tabbar--basic).
 
