--- a/packages/@lightningjs/ui-components/src/components/Row/Row.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Row/Row.mdx
@@ -76,13 +76,7 @@ If multiple of these properties are enabled, the order of precedence from highes
 
 ### Style Properties
 
-| name           | type                             | description                                                                                                                         |
-| -------------- | -------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------- |
-| alwaysScroll   | boolean                          | when true, the row will stop scrolling as it nears the right edge to prevent white space                                            |
-| neverScroll    | boolean                          | when true, the row will never scroll, unless alwaysScroll is set to true, and if false, the row will apply normal scrolling logic', |
-| scrollIndex    | number                           | index of currently selected item                                                                                                    |
-| itemSpacing    | number                           | spacing between items                                                                                                               |
-| itemTransition | <DocsLink id="lng.Transition" /> | transition to apply to items on render                                                                                              |
+The Row component shares the same style properties as the NavigationManager component. For a detailed description, please refer to style properties section in the [NavigationManager component](?path=/docs/navigation-navigationmanager--navigationmanager)
 
 ### Child Item Properties
 
