--- a/packages/@lightningjs/ui-components/src/components/Radio/Radio.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Radio/Radio.mdx
@@ -1,4 +1,4 @@
-﻿import { Meta, Tile } from '@storybook/blocks';
+﻿import { Meta, Title } from '@storybook/blocks';
 import * as RadioStories from './Radio.stories';
 
 <Meta of={RadioStories} />
