--- a/packages/@lightningjs/ui-components/src/components/GridOverlay/GridOverlay.mdx
+++ b/packages/@lightningjs/ui-components/src/components/GridOverlay/GridOverlay.mdx
@@ -1,4 +1,4 @@
-﻿import { Meta } from '@storybook/blocks';
+﻿import { Meta, Title } from '@storybook/blocks';
 import * as GridOverlayStories from './GridOverlay.stories';
 
 <Meta of={GridOverlayStories} />
