--- a/packages/@lightningjs/ui-components/src/components/Button/Button.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Button/Button.mdx
@@ -1,10 +1,10 @@
-﻿import { Meta } from '@storybook/blocks';
-import * as ButtonStories from './Button.stories';
+﻿import { ArgTypes, Meta, Title, Description } from '@storybook/blocks';
+import * as ButtonStories from './Button.stories.js';
 
 <Meta of={ButtonStories} />
 <Title />
-
-Basic component that handles styling and functionality for a button.
+<Description of={ButtonStories} />
+<ArgTypes of={ButtonStories} />
 
 ## Source
 
