chore: undo method

--- a/packages/@lightningjs/ui-components/src/components/Column/Column.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Column/Column.mdx
@@ -144,6 +144,10 @@ The `Column` component will utilize the following properties on each individual 
 
 A callback that can be overridden to do something with the items that are currently on screen. This will be called on every new render.
 
+#### appendItems(items: lng.Component[]): void
+
+Adds items to the end of the child list
+
 #### appendItemsAt(items: lng.Component[], index: number): void
 
 Adds items at a specified index of the child list
