feature(Storybook): removes category import no longer using

--- a/packages/@lightningjs/ui-components/src/components/Button/Button.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Button/Button.mdx
@@ -4,6 +4,9 @@ import * as ButtonStories from './Button.stories.js';
 <Meta of={ButtonStories} />
 <Title />
 <Description of={ButtonStories} />
+
+## Example of using ArgTypes from Storybook Blocks API
+
 <ArgTypes of={ButtonStories} />
 
 ## Source
